@@ -1,5 +1,7 @@
 package eu.webtoolkit.jwt;
 
+import java.lang.reflect.InvocationTargetException;
+
 import javax.servlet.ServletContext;
 import javax.servlet.ServletContextEvent;
 import javax.servlet.ServletContextListener;
@@ -39,21 +41,28 @@ public class ServletInit implements ServletContextListener {
 	private void initServletApi(ServletContext context, boolean contextIsInitializing) {
 		if (servletApi == null) {
 			try {
-				if (context.getMajorVersion() == 3) {
-					logger.info("Using servlet API 3");
-					servletApi = (ServletApi)Class.forName("eu.webtoolkit.jwt.ServletApi3").newInstance();
+				if (context.getMajorVersion() >= 4) {
+					logger.info("Using servlet API 4");
+					servletApi = (ServletApi)Class.forName("eu.webtoolkit.jwt.ServletApi4").getDeclaredConstructor().newInstance();
 				} else {
-					logger.info("Using servlet API 2.5");
-					servletApi = (ServletApi)Class.forName("eu.webtoolkit.jwt.ServletApi25").newInstance();
+					logger.info("Using servlet API 3");
+					servletApi = (ServletApi)Class.forName("eu.webtoolkit.jwt.ServletApi3").getDeclaredConstructor().newInstance();
 				}
-				
 				servletApi.init(context, contextIsInitializing);
+			} catch (NoSuchMethodException e) {
+				logger.error("", e);
 			} catch (InstantiationException e) {
-				e.printStackTrace();
+				logger.error("", e);
 			} catch (IllegalAccessException e) {
-				e.printStackTrace();
+				logger.error("", e);
 			} catch (ClassNotFoundException e) {
-				e.printStackTrace();
+				logger.error("", e);
+			} catch (IllegalArgumentException e) {
+				logger.error("", e);
+			} catch (InvocationTargetException e) {
+				logger.error("", e);
+			} catch (SecurityException e) {
+				logger.error("", e);
 			}
 		}
 	}
